--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
     root /usr/share/nginx/html;
 
     # Tentukan file default yang akan ditampilkan
-    index Projek Hilmi/index.html;
+    index index.html;
 
     location / {
         try_files $uri $uri/ =404;
